@@ -99,6 +99,26 @@ this repository contains the full copyright notices and license terms. -->
             <field name="menu" ref="account_payment_cog.menu_create_payments"/>
             <field name="group" ref="account_cog.group_financial_manage"/>
         </record>
+        <record model="ir.model.button-res.group" id="payment_draft_button_group_financial_manage">
+            <field name="button" ref="account_payment.payment_draft_button"/>
+            <field name="group" ref="account_cog.group_financial_manage"/>
+        </record>
+        <record model="ir.model.button-res.group" id="payment_approve_button_group_financial_manage">
+            <field name="button" ref="account_payment.payment_approve_button"/>
+            <field name="group" ref="account_cog.group_financial_manage"/>
+        </record>
+        <record model="ir.model.button-res.group" id="payment_process_button_group_financial_manage">
+            <field name="button" ref="account_payment_cog.button_action_process_payment"/>
+            <field name="group" ref="account_cog.group_financial_manage"/>
+        </record>
+        <record model="ir.model.button-res.group" id="payment_succeed_button_group_financial_manage">
+            <field name="button" ref="account_payment.payment_succeed_button"/>
+            <field name="group" ref="account_cog.group_financial_manage"/>
+        </record>
+        <record model="ir.model.button-res.group" id="payment_fail_button_group_financial_manage">
+            <field name="button" ref="account_payment.payment_fail_button"/>
+            <field name="group" ref="account_cog.group_financial_manage"/>
+        </record>
         <record model="ir.model.access" id="access_account_configuration_direct_debit_journal_group_financial_manage">
             <field name="model" search="[('model', '=', 'account.configuration.direct_debit_journal')]"/>
             <field name="group" ref="account_cog.group_financial_manage"/>
