@@ -1,3 +1,5 @@
+* BUG#7538 Add missing authorizations on buttons for account payments
+
 Version 1.14 - 2017-11-09
 * BUG#6692 The planned payment date for payments should be updated to the actual payment date
 * BUG#7337 Handle processing payments for the computation of the total outstanding amount on parties
